tests/machine/x/kotlin/let_and_print.error
line 64:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/let_and_print.kt:64:17: error: type mismatch: inferred type is Int? but Int was expected
    println(a + b)
                ^

 63:     val b: Int? = 20
 64:     println(a + b)
 65: }
